# Teraki_Test

./: .gitignore  README.md  run.sh
code/: CMakeLists.txt
code/source/: test1.cpp
output_final/: result.txt
python_code/: Teraki_test.ipynb
